[gd_scene load_steps=7 format=3 uid="uid://dvkwmx0u03mfr"]

[ext_resource type="Script" uid="uid://yrp40mh80588" path="res://Scripts/Components/Sprite/AnimationFrame.gd" id="1_3c3tv"]
[ext_resource type="PackedScene" uid="uid://miqn20i6iknf" path="res://Scenes/Components/Buttons/ImageButton.tscn" id="1_rdunq"]
[ext_resource type="PackedScene" uid="uid://bruv5nnnpj34c" path="res://Scenes/Components/Sprite/SpriteRect.tscn" id="3_y6sug"]
[ext_resource type="PackedScene" uid="uid://coa5jjimu3uqn" path="res://Scenes/Components/Buttons/MoveButton.tscn" id="4_y6sug"]
[ext_resource type="Texture2D" uid="uid://dv3gbpl2qy2md" path="res://Assets/Buttons/Down.png" id="5_3ogt5"]
[ext_resource type="PackedScene" uid="uid://qhgbpavbrsf" path="res://Scenes/Components/Buttons/DeleteButton.tscn" id="6_kamsd"]

[node name="AnimationFrame" node_paths=PackedStringArray("image") instance=ExtResource("3_y6sug")]
script = ExtResource("1_3c3tv")
image = NodePath("ImageButton")

[node name="ImageButton" parent="." index="0" instance=ExtResource("1_rdunq")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0

[node name="X" parent="SpinBoxes" index="0"]
allow_greater = true

[node name="Y" parent="SpinBoxes" index="1"]
allow_greater = true

[node name="W" parent="SpinBoxes" index="2"]
allow_greater = true

[node name="H" parent="SpinBoxes" index="3"]
allow_greater = true

[node name="Spacer" type="Control" parent="." index="5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoveUpButton" parent="." index="6" node_paths=PackedStringArray("node_to_move") instance=ExtResource("4_y6sug")]
layout_mode = 2
size_flags_vertical = 0
node_to_move = NodePath("..")
index_limit = 1

[node name="MoveDownButton" parent="." index="7" node_paths=PackedStringArray("node_to_move") instance=ExtResource("4_y6sug")]
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Move Down"
texture_normal = ExtResource("5_3ogt5")
node_to_move = NodePath("..")
direction = 1

[node name="DeleteButton" parent="." index="8" instance=ExtResource("6_kamsd")]
layout_mode = 2
size_flags_vertical = 0

[connection signal="rect_changed" from="." to="." method="update_frame"]
[connection signal="deletion_confirmed" from="DeleteButton" to="." method="queue_free"]
